config.json: updated title in header

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -2,7 +2,7 @@
     "type": "Config",
     "favicon": "/images/favicon.svg",
     "header": {
-        "title": "Quick Sites LLC.",
+        "title": "Hill Development LLC.",
         "navLinks": [
             {
                 "type": "Link",
