--- a/content/data/config.json
+++ b/content/data/config.json
@@ -2,7 +2,7 @@
     "type": "Config",
     "favicon": "/images/favicon.svg",
     "header": {
-        "title": "Hill Development LLC.",
+        "title": "",
         "navLinks": [
             {
                 "type": "Link",
