--- a/content/data/config.json
+++ b/content/data/config.json
@@ -2,7 +2,7 @@
     "type": "Config",
     "favicon": "/images/favicon.svg",
     "header": {
-        "title": "TypeScript + MUI Starter",
+        "title": "",
         "navLinks": [
             {
                 "type": "Link",
@@ -25,7 +25,7 @@
         ]
     },
     "footer": {
-        "copyrightText": "Powered by [Netlify](https://www.netlify.com/platform/).",
+        "copyrightText": "",
         "navLinks": [
             {
                 "type": "Link",
